# pulsar_calc

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 790b4d7014cd_add_product.py  7cb4a66d2fb5_addprice_for_electricity_to_user.py  e1004a5c672f_init.py  ec3f4538327f_add_alg_to_product.py
pkg/: logging.py
src/: config.py
src/bot/: bot.py
src/bot/filters/: filters.py
src/bot/keyboards/: admin_menu.py  keyboards.py  main_menu.py
src/bot/lexicon/: lexicon.py
src/bot/middlewares/: logger_mw.py  middlewares.py  storage_mw.py
src/bot/routers/: admin.py  routers.py  start.py  user.py
src/bot/states/: admin_state.py  user_state.py
src/bot/utils/: loop.py
src/services/: calculator.py  course_getter.py  excel_provider.py
src/services/calculate/: bitinfocharts.py
src/storage/: storage.py
src/storage/db/: connect.py  db.py
src/storage/db/models/: __init__.py  base.py  product.py  user.py
src/storage/db/repositories/: product.py  user.py
src/storage/redis/: db_redis.py
templates/: products.xlsx
